--- a/style.css
+++ b/style.css
@@ -1,3 +1,40 @@
 :root {
-    --hi: green;
+    --darker: #1A1D33;
+    --lighter: #105F82;
+    --lightest: #00ACBB;
+}
+
+body {
+    background-color: var(--darker);
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+}
+
+.sidebar {
+    grid-column: 1 / 2;
+    background-color: var(--lighter);
+    color: white;
+    height: 100vh;
+}
+
+h1 {
+    font-size: 20rem;
+}
+
+#logo {
+    height: 100px;
+    fill: white;
+    stroke: white;
+}
+
+
+
+button {
+    background-color: var(--lightest);
+    border-radius: 10px;
+    border: none;
+}
+
+.main {
+    grid-column: 2 / 3;
 }
